# apps/api/src/auth/auth.controller.ts
@@ -1,0 +1,37 @@
+import {
+  Body,
+  Controller,
+  Get,
+  Post,
+  Request,
+  UseGuards,
+} from '@nestjs/common';
+import { AuthService } from './auth.service';
+import { CreateUserDto } from 'src/users/dto/create-user.dto';
+import { ApiCreatedResponse, ApiOkResponse, ApiTags } from '@nestjs/swagger';
+import { User } from 'src/users/entities/user.entity';
+import { AuthGuard, RequestWithUser } from './auth.guard';
+
+@Controller('auth')
+@ApiTags('auth')
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
+
+  @Post('sign_up')
+  @ApiCreatedResponse({ type: User })
+  signUp(@Body() signUpDto: CreateUserDto) {
+    return this.authService.signUp(signUpDto.email, signUpDto.password);
+  }
+
+  @Post('sign_in')
+  @ApiOkResponse({ type: User })
+  signIn(@Body() signInDto: Record<string, string>) {
+    return this.authService.signIn(signInDto.email, signInDto.password);
+  }
+
+  @UseGuards(AuthGuard)
+  @Get('profile')
+  getProfile(@Request() req: RequestWithUser): RequestWithUser['user'] {
+    return req.user;
+  }
+}
