# apps/api/src/users/dto/create-user.dto.ts
@@ -1,0 +1,29 @@
+import type { CreateUserDto as CreateUserDtoType } from '@repo/types';
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsNotEmpty, IsEmail, IsOptional } from 'class-validator';
+
+export class CreateUserDto implements CreateUserDtoType {
+  @ApiProperty({
+    description: 'The email of the user',
+    example: 'test@example.com',
+  })
+  @IsEmail()
+  @IsNotEmpty()
+  email: string;
+
+  @ApiProperty({
+    description: 'The password of the user',
+    example: 'password',
+  })
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+
+  @ApiProperty({
+    description: 'The name of the user',
+    example: 'John Doe',
+  })
+  @IsString()
+  @IsOptional()
+  name?: string;
+}
